--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <!-- header start -->
    <header>
       <!-- banner -->
-      <div class="container mx-auto flex justify-center items-center py-16 mt-14">
+      <div class="container mx-auto  px-5 py-16 mt-14">
          <div>
             <h2 class="text-7xl text-stone-950 font-semibold">It's good <br>
                tea time at The
@@ -37,11 +37,14 @@
                 </button>
          </div>
          <div>
-           <div><img src="images/banner.png" alt=""></div>
-             <button class="py-2 px-8 bg-amber-300 justify-stretch ms-32 rounded-md "><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5 inline">
-               <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
-             </svg>
-              5.00 <br> Trust pilor rating</button>
+           <img src="images/banner.png" alt="">
+           <div class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
+            <i class="fa-solid fa-star text-3xl text-amber-400"></i>
+            <div>
+                <h3 class="text-3xl">5.00</h3>
+                <p>Trust Pilot Ratings</p>
+            </div>
+        </div>
          </div>
       </div>
 
