--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <!-- header start -->
    <header>
       <!-- banner -->
-      <div class="container mx-auto  px-5 py-16 mt-14">
+      <div class="container mx-auto md:flex justify-center items-center px-5 py-16 mt-14">
          <div>
             <h2 class="text-7xl text-stone-950 font-semibold">It's good <br>
                tea time at The
