featured products done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       }
     </script>
 </head>
-<body>
+<body class="font-manrope">
    <!-- header start -->
    <header>
       <!-- banner -->
@@ -50,7 +50,50 @@
 
    </header>
    <!-- main start -->
-   <main>
+   <main class="container mx-auto mt-12">
+      <section class="text-center my-24">
+         <h2 class="text-5xl p-4">Our Featured Products</h2>
+         <p class=" px-28 mb-3 text-gray-400">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+         <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+            <!--Milk tea 1 -->
+            <div class="card rounded-2xl p-4 drop-shadow-xl">
+               <div class="bg-slate-100 p-16 rounded-2xl">
+                  <img src="images/tea-1.png" alt="">
+                  <h2 class="text-2xl  mt-6">Milk Tea</h2>
+                  <p class="text-gray-400">Creamer could be replaced by fresh milk</p> 
+               </div>
+            </div>
+            <!--Milk tea  1 end -->
+            <!--Black tea 2 -->
+            <div class="rounded-2xl p-4 drop-shadow-xl">
+               <div class="bg-slate-100 p-16 rounded-2xl">
+                  <img src="images/tea-2.png" alt="">
+                  <h2 class="text-2xl  mt-6">Black Tea</h2>
+                  <p class="text-gray-400">Creamer could be replaced by fresh milk</p> 
+               </div>
+            </div>
+            <!--Black tea  1 end -->
+            <!-- tea 1 -->
+            <div class="rounded-2xl p-4 drop-shadow-xl">
+               <div class="bg-slate-100 p-16 rounded-2xl">
+                  <img src="images/tea-3.png" alt="">
+                  <h2 class="text-2xl  mt-6">Lemon Tea</h2>
+                  <p class="text-gray-400">Creamer could be replaced by fresh milk</p> 
+               </div>
+            </div>
+            <!--lemon tea  1 end -->
+            <!-- tea 1 -->
+            <div class="rounded-2xl p-4 drop-shadow-xl">
+               <div class="bg-slate-100 p-16 rounded-2xl">
+                  <img src="images/tea-4.png" alt="">
+                  <h2 class="text-2xl mt-6 ">Lemon Tea</h2>
+                  <p class="text-gray-400">Creamer could be replaced by fresh milk</p> 
+               </div>
+            </div>
+            <!--lemon tea  1 end -->
+           
+
+      </section>
 
    </main>
    <!-- footer  start-->
