--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <div class="mt-10 text-center">
             <p class="text-gray-400">Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
         </div>
-    
+           <!-- footer end -->
    </footer>
 </body>
 </html>
